# WebX

./: BUILD.gn  DEPS
include/: libwebx.h
libwebx/: BUILD.gn
libwebx/include/: libwebx.h
libwebx/libcef/: BUILD.gn
libwebx/libcef/common/: webx_libcef_app.cc  webx_libcef_app.h
libwebx/libcef/webx_helper/: main.cc
libwebx/libcef/webx_helper/app/: webx_libcef_other_app.cc  webx_libcef_other_app.h  webx_libcef_renderer_app.cc  webx_libcef_renderer_app.h
libwebx/src/: libwebx.cc
libwebx/src/common/: libwebx_common.h
libwebx/src/implement/: libwebx_impl.cc  libwebx_impl.h
tools/: download_and_extract_libcef.py
