import("//base.gni")

config("libcef_dll_wrapper_config") {
  include_dirs = [
    ".",
    "//webx/libcef",
    "//webx/libcef/include",
  ]

  if (is_clang) {
    cflags = [
      "-Wno-undef",
      "-Wno-undefined-var-template",
    ]
  }

  if (is_win) {
    if (current_cpu == "x86") {
      # Set the initial stack size to 0.5MiB, instead of the 1.5MiB minimum
      # needed by CEF's main thread. This saves significant memory on threads
      # (like those in the Windows thread pool, and others) whose stack size we
      # can only control through this setting. The main thread (in 32-bit builds
      # only) uses fibers to switch to a 4MiB stack at runtime via
      # CefRunWinMainWithPreferredStackSize().
      ldflags = [ "/STACK:0x80000" ]
    } else {
      # Increase the initial stack size to 8MiB from the default 1MiB.
      ldflags = [ "/STACK:0x800000" ]
    }
  }
}

base_static_library("libcef_dll_wrapper") {
  public_configs = [ ":libcef_dll_wrapper_config" ]

  defines = [ "WRAPPING_CEF_SHARED" ]

  # includes common
  sources = [
    "//webx/libcef/include/base/cef_atomic_flag.h",
    "//webx/libcef/include/base/cef_atomic_ref_count.h",
    "//webx/libcef/include/base/cef_auto_reset.h",
    "//webx/libcef/include/base/cef_bind.h",
    "//webx/libcef/include/base/cef_build.h",
    "//webx/libcef/include/base/cef_callback.h",
    "//webx/libcef/include/base/cef_callback_forward.h",
    "//webx/libcef/include/base/cef_callback_helpers.h",
    "//webx/libcef/include/base/cef_callback_list.h",
    "//webx/libcef/include/base/cef_cancelable_callback.h",
    "//webx/libcef/include/base/cef_compiler_specific.h",
    "//webx/libcef/include/base/cef_dump_without_crashing.h",
    "//webx/libcef/include/base/cef_lock.h",
    "//webx/libcef/include/base/cef_logging.h",
    "//webx/libcef/include/base/cef_macros.h",
    "//webx/libcef/include/base/cef_platform_thread.h",
    "//webx/libcef/include/base/cef_ref_counted.h",
    "//webx/libcef/include/base/cef_scoped_refptr.h",
    "//webx/libcef/include/base/cef_thread_checker.h",
    "//webx/libcef/include/base/cef_trace_event.h",
    "//webx/libcef/include/base/cef_tuple.h",
    "//webx/libcef/include/base/cef_weak_ptr.h",
    "//webx/libcef/include/base/internal/cef_bind_internal.h",
    "//webx/libcef/include/base/internal/cef_callback_internal.h",
    "//webx/libcef/include/base/internal/cef_color_id_macros.inc",
    "//webx/libcef/include/base/internal/cef_lock_impl.h",
    "//webx/libcef/include/base/internal/cef_raw_scoped_refptr_mismatch_checker.h",
    "//webx/libcef/include/base/internal/cef_scoped_policy.h",
    "//webx/libcef/include/base/internal/cef_thread_checker_impl.h",
    "//webx/libcef/include/cef_api_hash.h",
    "//webx/libcef/include/cef_base.h",
    "//webx/libcef/include/cef_version.h",
    "//webx/libcef/include/internal/cef_export.h",
    "//webx/libcef/include/internal/cef_ptr.h",
    "//webx/libcef/include/internal/cef_string_wrappers.h",
    "//webx/libcef/include/internal/cef_time_wrappers.h",
    "//webx/libcef/include/internal/cef_types_wrappers.h",
  ]

  # includes common capi
  sources += [
    "//webx/libcef/include/internal/cef_dump_without_crashing_internal.h",
    "//webx/libcef/include/internal/cef_logging_internal.h",
    "//webx/libcef/include/internal/cef_string.h",
    "//webx/libcef/include/internal/cef_string_list.h",
    "//webx/libcef/include/internal/cef_string_map.h",
    "//webx/libcef/include/internal/cef_string_multimap.h",
    "//webx/libcef/include/internal/cef_string_types.h",
    "//webx/libcef/include/internal/cef_thread_internal.h",
    "//webx/libcef/include/internal/cef_time.h",
    "//webx/libcef/include/internal/cef_trace_event_internal.h",
    "//webx/libcef/include/internal/cef_types.h",
    "//webx/libcef/include/internal/cef_types_color.h",
    "//webx/libcef/include/internal/cef_types_content_settings.h",
    "//webx/libcef/include/internal/cef_types_geometry.h",
    "//webx/libcef/include/internal/cef_types_runtime.h",
  ]

  #includes capi
  sources += [ "//webx/libcef/include/capi/cef_base_capi.h" ]

  # autogen cpp includes
  sources += [
    "//webx/libcef/include/cef_accessibility_handler.h",
    "//webx/libcef/include/cef_app.h",
    "//webx/libcef/include/cef_audio_handler.h",
    "//webx/libcef/include/cef_auth_callback.h",
    "//webx/libcef/include/cef_browser.h",
    "//webx/libcef/include/cef_browser_process_handler.h",
    "//webx/libcef/include/cef_callback.h",
    "//webx/libcef/include/cef_client.h",
    "//webx/libcef/include/cef_command_handler.h",
    "//webx/libcef/include/cef_command_line.h",
    "//webx/libcef/include/cef_context_menu_handler.h",
    "//webx/libcef/include/cef_cookie.h",
    "//webx/libcef/include/cef_crash_util.h",
    "//webx/libcef/include/cef_devtools_message_observer.h",
    "//webx/libcef/include/cef_dialog_handler.h",
    "//webx/libcef/include/cef_display_handler.h",
    "//webx/libcef/include/cef_dom.h",
    "//webx/libcef/include/cef_download_handler.h",
    "//webx/libcef/include/cef_download_item.h",
    "//webx/libcef/include/cef_drag_data.h",
    "//webx/libcef/include/cef_drag_handler.h",
    "//webx/libcef/include/cef_file_util.h",
    "//webx/libcef/include/cef_find_handler.h",
    "//webx/libcef/include/cef_focus_handler.h",
    "//webx/libcef/include/cef_frame.h",
    "//webx/libcef/include/cef_frame_handler.h",
    "//webx/libcef/include/cef_i18n_util.h",
    "//webx/libcef/include/cef_image.h",
    "//webx/libcef/include/cef_jsdialog_handler.h",
    "//webx/libcef/include/cef_keyboard_handler.h",
    "//webx/libcef/include/cef_life_span_handler.h",
    "//webx/libcef/include/cef_load_handler.h",
    "//webx/libcef/include/cef_media_router.h",
    "//webx/libcef/include/cef_menu_model.h",
    "//webx/libcef/include/cef_menu_model_delegate.h",
    "//webx/libcef/include/cef_navigation_entry.h",
    "//webx/libcef/include/cef_origin_whitelist.h",
    "//webx/libcef/include/cef_parser.h",
    "//webx/libcef/include/cef_path_util.h",
    "//webx/libcef/include/cef_permission_handler.h",
    "//webx/libcef/include/cef_preference.h",
    "//webx/libcef/include/cef_print_handler.h",
    "//webx/libcef/include/cef_print_settings.h",
    "//webx/libcef/include/cef_process_message.h",
    "//webx/libcef/include/cef_process_util.h",
    "//webx/libcef/include/cef_registration.h",
    "//webx/libcef/include/cef_render_handler.h",
    "//webx/libcef/include/cef_render_process_handler.h",
    "//webx/libcef/include/cef_request.h",
    "//webx/libcef/include/cef_request_context.h",
    "//webx/libcef/include/cef_request_context_handler.h",
    "//webx/libcef/include/cef_request_handler.h",
    "//webx/libcef/include/cef_resource_bundle.h",
    "//webx/libcef/include/cef_resource_bundle_handler.h",
    "//webx/libcef/include/cef_resource_handler.h",
    "//webx/libcef/include/cef_resource_request_handler.h",
    "//webx/libcef/include/cef_response.h",
    "//webx/libcef/include/cef_response_filter.h",
    "//webx/libcef/include/cef_scheme.h",
    "//webx/libcef/include/cef_server.h",
    "//webx/libcef/include/cef_shared_memory_region.h",
    "//webx/libcef/include/cef_shared_process_message_builder.h",
    "//webx/libcef/include/cef_ssl_info.h",
    "//webx/libcef/include/cef_ssl_status.h",
    "//webx/libcef/include/cef_stream.h",
    "//webx/libcef/include/cef_string_visitor.h",
    "//webx/libcef/include/cef_task.h",
    "//webx/libcef/include/cef_task_manager.h",
    "//webx/libcef/include/cef_thread.h",
    "//webx/libcef/include/cef_trace.h",
    "//webx/libcef/include/cef_unresponsive_process_callback.h",
    "//webx/libcef/include/cef_urlrequest.h",
    "//webx/libcef/include/cef_v8.h",
    "//webx/libcef/include/cef_values.h",
    "//webx/libcef/include/cef_waitable_event.h",
    "//webx/libcef/include/cef_x509_certificate.h",
    "//webx/libcef/include/cef_xml_reader.h",
    "//webx/libcef/include/cef_zip_reader.h",
    "//webx/libcef/include/test/cef_test_helpers.h",
    "//webx/libcef/include/test/cef_test_server.h",
    "//webx/libcef/include/test/cef_translator_test.h",
    "//webx/libcef/include/views/cef_box_layout.h",
    "//webx/libcef/include/views/cef_browser_view.h",
    "//webx/libcef/include/views/cef_browser_view_delegate.h",
    "//webx/libcef/include/views/cef_button.h",
    "//webx/libcef/include/views/cef_button_delegate.h",
    "//webx/libcef/include/views/cef_display.h",
    "//webx/libcef/include/views/cef_fill_layout.h",
    "//webx/libcef/include/views/cef_label_button.h",
    "//webx/libcef/include/views/cef_layout.h",
    "//webx/libcef/include/views/cef_menu_button.h",
    "//webx/libcef/include/views/cef_menu_button_delegate.h",
    "//webx/libcef/include/views/cef_overlay_controller.h",
    "//webx/libcef/include/views/cef_panel.h",
    "//webx/libcef/include/views/cef_panel_delegate.h",
    "//webx/libcef/include/views/cef_scroll_view.h",
    "//webx/libcef/include/views/cef_textfield.h",
    "//webx/libcef/include/views/cef_textfield_delegate.h",
    "//webx/libcef/include/views/cef_view.h",
    "//webx/libcef/include/views/cef_view_delegate.h",
    "//webx/libcef/include/views/cef_window.h",
    "//webx/libcef/include/views/cef_window_delegate.h",
  ]

  # autogen capi includes
  sources += [
    "//webx/libcef/include/capi/cef_accessibility_handler_capi.h",
    "//webx/libcef/include/capi/cef_app_capi.h",
    "//webx/libcef/include/capi/cef_audio_handler_capi.h",
    "//webx/libcef/include/capi/cef_auth_callback_capi.h",
    "//webx/libcef/include/capi/cef_browser_capi.h",
    "//webx/libcef/include/capi/cef_browser_process_handler_capi.h",
    "//webx/libcef/include/capi/cef_callback_capi.h",
    "//webx/libcef/include/capi/cef_client_capi.h",
    "//webx/libcef/include/capi/cef_command_handler_capi.h",
    "//webx/libcef/include/capi/cef_command_line_capi.h",
    "//webx/libcef/include/capi/cef_context_menu_handler_capi.h",
    "//webx/libcef/include/capi/cef_cookie_capi.h",
    "//webx/libcef/include/capi/cef_crash_util_capi.h",
    "//webx/libcef/include/capi/cef_devtools_message_observer_capi.h",
    "//webx/libcef/include/capi/cef_dialog_handler_capi.h",
    "//webx/libcef/include/capi/cef_display_handler_capi.h",
    "//webx/libcef/include/capi/cef_dom_capi.h",
    "//webx/libcef/include/capi/cef_download_handler_capi.h",
    "//webx/libcef/include/capi/cef_download_item_capi.h",
    "//webx/libcef/include/capi/cef_drag_data_capi.h",
    "//webx/libcef/include/capi/cef_drag_handler_capi.h",
    "//webx/libcef/include/capi/cef_file_util_capi.h",
    "//webx/libcef/include/capi/cef_find_handler_capi.h",
    "//webx/libcef/include/capi/cef_focus_handler_capi.h",
    "//webx/libcef/include/capi/cef_frame_capi.h",
    "//webx/libcef/include/capi/cef_frame_handler_capi.h",
    "//webx/libcef/include/capi/cef_i18n_util_capi.h",
    "//webx/libcef/include/capi/cef_image_capi.h",
    "//webx/libcef/include/capi/cef_jsdialog_handler_capi.h",
    "//webx/libcef/include/capi/cef_keyboard_handler_capi.h",
    "//webx/libcef/include/capi/cef_life_span_handler_capi.h",
    "//webx/libcef/include/capi/cef_load_handler_capi.h",
    "//webx/libcef/include/capi/cef_media_router_capi.h",
    "//webx/libcef/include/capi/cef_menu_model_capi.h",
    "//webx/libcef/include/capi/cef_menu_model_delegate_capi.h",
    "//webx/libcef/include/capi/cef_navigation_entry_capi.h",
    "//webx/libcef/include/capi/cef_origin_whitelist_capi.h",
    "//webx/libcef/include/capi/cef_parser_capi.h",
    "//webx/libcef/include/capi/cef_path_util_capi.h",
    "//webx/libcef/include/capi/cef_permission_handler_capi.h",
    "//webx/libcef/include/capi/cef_preference_capi.h",
    "//webx/libcef/include/capi/cef_print_handler_capi.h",
    "//webx/libcef/include/capi/cef_print_settings_capi.h",
    "//webx/libcef/include/capi/cef_process_message_capi.h",
    "//webx/libcef/include/capi/cef_process_util_capi.h",
    "//webx/libcef/include/capi/cef_registration_capi.h",
    "//webx/libcef/include/capi/cef_render_handler_capi.h",
    "//webx/libcef/include/capi/cef_render_process_handler_capi.h",
    "//webx/libcef/include/capi/cef_request_capi.h",
    "//webx/libcef/include/capi/cef_request_context_capi.h",
    "//webx/libcef/include/capi/cef_request_context_handler_capi.h",
    "//webx/libcef/include/capi/cef_request_handler_capi.h",
    "//webx/libcef/include/capi/cef_resource_bundle_capi.h",
    "//webx/libcef/include/capi/cef_resource_bundle_handler_capi.h",
    "//webx/libcef/include/capi/cef_resource_handler_capi.h",
    "//webx/libcef/include/capi/cef_resource_request_handler_capi.h",
    "//webx/libcef/include/capi/cef_response_capi.h",
    "//webx/libcef/include/capi/cef_response_filter_capi.h",
    "//webx/libcef/include/capi/cef_scheme_capi.h",
    "//webx/libcef/include/capi/cef_server_capi.h",
    "//webx/libcef/include/capi/cef_shared_memory_region_capi.h",
    "//webx/libcef/include/capi/cef_shared_process_message_builder_capi.h",
    "//webx/libcef/include/capi/cef_ssl_info_capi.h",
    "//webx/libcef/include/capi/cef_ssl_status_capi.h",
    "//webx/libcef/include/capi/cef_stream_capi.h",
    "//webx/libcef/include/capi/cef_string_visitor_capi.h",
    "//webx/libcef/include/capi/cef_task_capi.h",
    "//webx/libcef/include/capi/cef_task_manager_capi.h",
    "//webx/libcef/include/capi/cef_thread_capi.h",
    "//webx/libcef/include/capi/cef_trace_capi.h",
    "//webx/libcef/include/capi/cef_unresponsive_process_callback_capi.h",
    "//webx/libcef/include/capi/cef_urlrequest_capi.h",
    "//webx/libcef/include/capi/cef_v8_capi.h",
    "//webx/libcef/include/capi/cef_values_capi.h",
    "//webx/libcef/include/capi/cef_waitable_event_capi.h",
    "//webx/libcef/include/capi/cef_x509_certificate_capi.h",
    "//webx/libcef/include/capi/cef_xml_reader_capi.h",
    "//webx/libcef/include/capi/cef_zip_reader_capi.h",
    "//webx/libcef/include/capi/test/cef_test_helpers_capi.h",
    "//webx/libcef/include/capi/test/cef_test_server_capi.h",
    "//webx/libcef/include/capi/test/cef_translator_test_capi.h",
    "//webx/libcef/include/capi/views/cef_box_layout_capi.h",
    "//webx/libcef/include/capi/views/cef_browser_view_capi.h",
    "//webx/libcef/include/capi/views/cef_browser_view_delegate_capi.h",
    "//webx/libcef/include/capi/views/cef_button_capi.h",
    "//webx/libcef/include/capi/views/cef_button_delegate_capi.h",
    "//webx/libcef/include/capi/views/cef_display_capi.h",
    "//webx/libcef/include/capi/views/cef_fill_layout_capi.h",
    "//webx/libcef/include/capi/views/cef_label_button_capi.h",
    "//webx/libcef/include/capi/views/cef_layout_capi.h",
    "//webx/libcef/include/capi/views/cef_menu_button_capi.h",
    "//webx/libcef/include/capi/views/cef_menu_button_delegate_capi.h",
    "//webx/libcef/include/capi/views/cef_overlay_controller_capi.h",
    "//webx/libcef/include/capi/views/cef_panel_capi.h",
    "//webx/libcef/include/capi/views/cef_panel_delegate_capi.h",
    "//webx/libcef/include/capi/views/cef_scroll_view_capi.h",
    "//webx/libcef/include/capi/views/cef_textfield_capi.h",
    "//webx/libcef/include/capi/views/cef_textfield_delegate_capi.h",
    "//webx/libcef/include/capi/views/cef_view_capi.h",
    "//webx/libcef/include/capi/views/cef_view_delegate_capi.h",
    "//webx/libcef/include/capi/views/cef_window_capi.h",
    "//webx/libcef/include/capi/views/cef_window_delegate_capi.h",
  ]

  # includes wrapper
  sources += [
    "//webx/libcef/include/wrapper/cef_byte_read_handler.h",
    "//webx/libcef/include/wrapper/cef_closure_task.h",
    "//webx/libcef/include/wrapper/cef_helpers.h",
    "//webx/libcef/include/wrapper/cef_message_router.h",
    "//webx/libcef/include/wrapper/cef_resource_manager.h",
    "//webx/libcef/include/wrapper/cef_scoped_temp_dir.h",
    "//webx/libcef/include/wrapper/cef_stream_resource_handler.h",
    "//webx/libcef/include/wrapper/cef_xml_object.h",
    "//webx/libcef/include/wrapper/cef_zip_archive.h",
  ]

  # libcef_dll_wrapper base
  sources += [
    "//webx/libcef/libcef_dll/base/cef_atomic_flag.cc",
    "//webx/libcef/libcef_dll/base/cef_callback_helpers.cc",
    "//webx/libcef/libcef_dll/base/cef_callback_internal.cc",
    "//webx/libcef/libcef_dll/base/cef_dump_without_crashing.cc",
    "//webx/libcef/libcef_dll/base/cef_lock.cc",
    "//webx/libcef/libcef_dll/base/cef_lock_impl.cc",
    "//webx/libcef/libcef_dll/base/cef_logging.cc",
    "//webx/libcef/libcef_dll/base/cef_ref_counted.cc",
    "//webx/libcef/libcef_dll/base/cef_thread_checker_impl.cc",
    "//webx/libcef/libcef_dll/base/cef_weak_ptr.cc",
  ]

  # libcef_dll_wrapper common
  sources += [
    "//webx/libcef/libcef_dll/cpptoc/base_ref_counted_cpptoc.cc",
    "//webx/libcef/libcef_dll/cpptoc/base_ref_counted_cpptoc.h",
    "//webx/libcef/libcef_dll/cpptoc/base_scoped_cpptoc.cc",
    "//webx/libcef/libcef_dll/cpptoc/base_scoped_cpptoc.h",
    "//webx/libcef/libcef_dll/cpptoc/cpptoc_ref_counted.h",
    "//webx/libcef/libcef_dll/cpptoc/cpptoc_scoped.h",
    "//webx/libcef/libcef_dll/ctocpp/ctocpp_ref_counted.h",
    "//webx/libcef/libcef_dll/ctocpp/ctocpp_scoped.h",
    "//webx/libcef/libcef_dll/shutdown_checker.cc",
    "//webx/libcef/libcef_dll/shutdown_checker.h",
    "//webx/libcef/libcef_dll/template_util.h",
    "//webx/libcef/libcef_dll/transfer_util.cc",
    "//webx/libcef/libcef_dll/transfer_util.h",
    "//webx/libcef/libcef_dll/wrapper/cef_browser_info_map.h",
    "//webx/libcef/libcef_dll/wrapper/cef_byte_read_handler.cc",
    "//webx/libcef/libcef_dll/wrapper/cef_closure_task.cc",
    "//webx/libcef/libcef_dll/wrapper/cef_message_router.cc",
    "//webx/libcef/libcef_dll/wrapper/cef_message_router_utils.cc",
    "//webx/libcef/libcef_dll/wrapper/cef_message_router_utils.h",
    "//webx/libcef/libcef_dll/wrapper/cef_resource_manager.cc",
    "//webx/libcef/libcef_dll/wrapper/cef_scoped_temp_dir.cc",
    "//webx/libcef/libcef_dll/wrapper/cef_stream_resource_handler.cc",
    "//webx/libcef/libcef_dll/wrapper/cef_xml_object.cc",
    "//webx/libcef/libcef_dll/wrapper/cef_zip_archive.cc",
    "//webx/libcef/libcef_dll/wrapper/libcef_dll_wrapper.cc",
    "//webx/libcef/libcef_dll/wrapper/libcef_dll_wrapper2.cc",
    "//webx/libcef/libcef_dll/wrapper_types.h",
  ]

  # libcef_dll_wrapper autogen client side
  sources += [
    "//webx/libcef/libcef_dll/cpptoc/accessibility_handler_cpptoc.cc",
    "//webx/libcef/libcef_dll/cpptoc/accessibility_handler_cpptoc.h",
    "//webx/libcef/libcef_dll/cpptoc/app_cpptoc.cc",
    "//webx/libcef/libcef_dll/cpptoc/app_cpptoc.h",
    "//webx/libcef/libcef_dll/cpptoc/audio_handler_cpptoc.cc",
    "//webx/libcef/libcef_dll/cpptoc/audio_handler_cpptoc.h",
    "//webx/libcef/libcef_dll/cpptoc/browser_process_handler_cpptoc.cc",
    "//webx/libcef/libcef_dll/cpptoc/browser_process_handler_cpptoc.h",
    "//webx/libcef/libcef_dll/cpptoc/client_cpptoc.cc",
    "//webx/libcef/libcef_dll/cpptoc/client_cpptoc.h",
    "//webx/libcef/libcef_dll/cpptoc/command_handler_cpptoc.cc",
    "//webx/libcef/libcef_dll/cpptoc/command_handler_cpptoc.h",
    "//webx/libcef/libcef_dll/cpptoc/completion_callback_cpptoc.cc",
    "//webx/libcef/libcef_dll/cpptoc/completion_callback_cpptoc.h",
    "//webx/libcef/libcef_dll/cpptoc/context_menu_handler_cpptoc.cc",
    "//webx/libcef/libcef_dll/cpptoc/context_menu_handler_cpptoc.h",
    "//webx/libcef/libcef_dll/cpptoc/cookie_access_filter_cpptoc.cc",
    "//webx/libcef/libcef_dll/cpptoc/cookie_access_filter_cpptoc.h",
    "//webx/libcef/libcef_dll/cpptoc/cookie_visitor_cpptoc.cc",
    "//webx/libcef/libcef_dll/cpptoc/cookie_visitor_cpptoc.h",
    "//webx/libcef/libcef_dll/cpptoc/delete_cookies_callback_cpptoc.cc",
    "//webx/libcef/libcef_dll/cpptoc/delete_cookies_callback_cpptoc.h",
    "//webx/libcef/libcef_dll/cpptoc/dev_tools_message_observer_cpptoc.cc",
    "//webx/libcef/libcef_dll/cpptoc/dev_tools_message_observer_cpptoc.h",
    "//webx/libcef/libcef_dll/cpptoc/dialog_handler_cpptoc.cc",
    "//webx/libcef/libcef_dll/cpptoc/dialog_handler_cpptoc.h",
    "//webx/libcef/libcef_dll/cpptoc/display_handler_cpptoc.cc",
    "//webx/libcef/libcef_dll/cpptoc/display_handler_cpptoc.h",
    "//webx/libcef/libcef_dll/cpptoc/domvisitor_cpptoc.cc",
    "//webx/libcef/libcef_dll/cpptoc/domvisitor_cpptoc.h",
    "//webx/libcef/libcef_dll/cpptoc/download_handler_cpptoc.cc",
    "//webx/libcef/libcef_dll/cpptoc/download_handler_cpptoc.h",
    "//webx/libcef/libcef_dll/cpptoc/download_image_callback_cpptoc.cc",
    "//webx/libcef/libcef_dll/cpptoc/download_image_callback_cpptoc.h",
    "//webx/libcef/libcef_dll/cpptoc/drag_handler_cpptoc.cc",
    "//webx/libcef/libcef_dll/cpptoc/drag_handler_cpptoc.h",
    "//webx/libcef/libcef_dll/cpptoc/end_tracing_callback_cpptoc.cc",
    "//webx/libcef/libcef_dll/cpptoc/end_tracing_callback_cpptoc.h",
    "//webx/libcef/libcef_dll/cpptoc/find_handler_cpptoc.cc",
    "//webx/libcef/libcef_dll/cpptoc/find_handler_cpptoc.h",
    "//webx/libcef/libcef_dll/cpptoc/focus_handler_cpptoc.cc",
    "//webx/libcef/libcef_dll/cpptoc/focus_handler_cpptoc.h",
    "//webx/libcef/libcef_dll/cpptoc/frame_handler_cpptoc.cc",
    "//webx/libcef/libcef_dll/cpptoc/frame_handler_cpptoc.h",
    "//webx/libcef/libcef_dll/cpptoc/jsdialog_handler_cpptoc.cc",
    "//webx/libcef/libcef_dll/cpptoc/jsdialog_handler_cpptoc.h",
    "//webx/libcef/libcef_dll/cpptoc/keyboard_handler_cpptoc.cc",
    "//webx/libcef/libcef_dll/cpptoc/keyboard_handler_cpptoc.h",
    "//webx/libcef/libcef_dll/cpptoc/life_span_handler_cpptoc.cc",
    "//webx/libcef/libcef_dll/cpptoc/life_span_handler_cpptoc.h",
    "//webx/libcef/libcef_dll/cpptoc/load_handler_cpptoc.cc",
    "//webx/libcef/libcef_dll/cpptoc/load_handler_cpptoc.h",
    "//webx/libcef/libcef_dll/cpptoc/media_observer_cpptoc.cc",
    "//webx/libcef/libcef_dll/cpptoc/media_observer_cpptoc.h",
    "//webx/libcef/libcef_dll/cpptoc/media_route_create_callback_cpptoc.cc",
    "//webx/libcef/libcef_dll/cpptoc/media_route_create_callback_cpptoc.h",
    "//webx/libcef/libcef_dll/cpptoc/media_sink_device_info_callback_cpptoc.cc",
    "//webx/libcef/libcef_dll/cpptoc/media_sink_device_info_callback_cpptoc.h",
    "//webx/libcef/libcef_dll/cpptoc/menu_model_delegate_cpptoc.cc",
    "//webx/libcef/libcef_dll/cpptoc/menu_model_delegate_cpptoc.h",
    "//webx/libcef/libcef_dll/cpptoc/navigation_entry_visitor_cpptoc.cc",
    "//webx/libcef/libcef_dll/cpptoc/navigation_entry_visitor_cpptoc.h",
    "//webx/libcef/libcef_dll/cpptoc/pdf_print_callback_cpptoc.cc",
    "//webx/libcef/libcef_dll/cpptoc/pdf_print_callback_cpptoc.h",
    "//webx/libcef/libcef_dll/cpptoc/permission_handler_cpptoc.cc",
    "//webx/libcef/libcef_dll/cpptoc/permission_handler_cpptoc.h",
    "//webx/libcef/libcef_dll/cpptoc/print_handler_cpptoc.cc",
    "//webx/libcef/libcef_dll/cpptoc/print_handler_cpptoc.h",
    "//webx/libcef/libcef_dll/cpptoc/read_handler_cpptoc.cc",
    "//webx/libcef/libcef_dll/cpptoc/read_handler_cpptoc.h",
    "//webx/libcef/libcef_dll/cpptoc/render_handler_cpptoc.cc",
    "//webx/libcef/libcef_dll/cpptoc/render_handler_cpptoc.h",
    "//webx/libcef/libcef_dll/cpptoc/render_process_handler_cpptoc.cc",
    "//webx/libcef/libcef_dll/cpptoc/render_process_handler_cpptoc.h",
    "//webx/libcef/libcef_dll/cpptoc/request_context_handler_cpptoc.cc",
    "//webx/libcef/libcef_dll/cpptoc/request_context_handler_cpptoc.h",
    "//webx/libcef/libcef_dll/cpptoc/request_handler_cpptoc.cc",
    "//webx/libcef/libcef_dll/cpptoc/request_handler_cpptoc.h",
    "//webx/libcef/libcef_dll/cpptoc/resolve_callback_cpptoc.cc",
    "//webx/libcef/libcef_dll/cpptoc/resolve_callback_cpptoc.h",
    "//webx/libcef/libcef_dll/cpptoc/resource_bundle_handler_cpptoc.cc",
    "//webx/libcef/libcef_dll/cpptoc/resource_bundle_handler_cpptoc.h",
    "//webx/libcef/libcef_dll/cpptoc/resource_handler_cpptoc.cc",
    "//webx/libcef/libcef_dll/cpptoc/resource_handler_cpptoc.h",
    "//webx/libcef/libcef_dll/cpptoc/resource_request_handler_cpptoc.cc",
    "//webx/libcef/libcef_dll/cpptoc/resource_request_handler_cpptoc.h",
    "//webx/libcef/libcef_dll/cpptoc/response_filter_cpptoc.cc",
    "//webx/libcef/libcef_dll/cpptoc/response_filter_cpptoc.h",
    "//webx/libcef/libcef_dll/cpptoc/run_file_dialog_callback_cpptoc.cc",
    "//webx/libcef/libcef_dll/cpptoc/run_file_dialog_callback_cpptoc.h",
    "//webx/libcef/libcef_dll/cpptoc/scheme_handler_factory_cpptoc.cc",
    "//webx/libcef/libcef_dll/cpptoc/scheme_handler_factory_cpptoc.h",
    "//webx/libcef/libcef_dll/cpptoc/server_handler_cpptoc.cc",
    "//webx/libcef/libcef_dll/cpptoc/server_handler_cpptoc.h",
    "//webx/libcef/libcef_dll/cpptoc/set_cookie_callback_cpptoc.cc",
    "//webx/libcef/libcef_dll/cpptoc/set_cookie_callback_cpptoc.h",
    "//webx/libcef/libcef_dll/cpptoc/string_visitor_cpptoc.cc",
    "//webx/libcef/libcef_dll/cpptoc/string_visitor_cpptoc.h",
    "//webx/libcef/libcef_dll/cpptoc/task_cpptoc.cc",
    "//webx/libcef/libcef_dll/cpptoc/task_cpptoc.h",
    "//webx/libcef/libcef_dll/cpptoc/test/test_server_handler_cpptoc.cc",
    "//webx/libcef/libcef_dll/cpptoc/test/test_server_handler_cpptoc.h",
    "//webx/libcef/libcef_dll/cpptoc/test/translator_test_ref_ptr_client_child_cpptoc.cc",
    "//webx/libcef/libcef_dll/cpptoc/test/translator_test_ref_ptr_client_child_cpptoc.h",
    "//webx/libcef/libcef_dll/cpptoc/test/translator_test_ref_ptr_client_cpptoc.cc",
    "//webx/libcef/libcef_dll/cpptoc/test/translator_test_ref_ptr_client_cpptoc.h",
    "//webx/libcef/libcef_dll/cpptoc/test/translator_test_scoped_client_child_cpptoc.cc",
    "//webx/libcef/libcef_dll/cpptoc/test/translator_test_scoped_client_child_cpptoc.h",
    "//webx/libcef/libcef_dll/cpptoc/test/translator_test_scoped_client_cpptoc.cc",
    "//webx/libcef/libcef_dll/cpptoc/test/translator_test_scoped_client_cpptoc.h",
    "//webx/libcef/libcef_dll/cpptoc/urlrequest_client_cpptoc.cc",
    "//webx/libcef/libcef_dll/cpptoc/urlrequest_client_cpptoc.h",
    "//webx/libcef/libcef_dll/cpptoc/v8accessor_cpptoc.cc",
    "//webx/libcef/libcef_dll/cpptoc/v8accessor_cpptoc.h",
    "//webx/libcef/libcef_dll/cpptoc/v8array_buffer_release_callback_cpptoc.cc",
    "//webx/libcef/libcef_dll/cpptoc/v8array_buffer_release_callback_cpptoc.h",
    "//webx/libcef/libcef_dll/cpptoc/v8handler_cpptoc.cc",
    "//webx/libcef/libcef_dll/cpptoc/v8handler_cpptoc.h",
    "//webx/libcef/libcef_dll/cpptoc/v8interceptor_cpptoc.cc",
    "//webx/libcef/libcef_dll/cpptoc/v8interceptor_cpptoc.h",
    "//webx/libcef/libcef_dll/cpptoc/views/browser_view_delegate_cpptoc.cc",
    "//webx/libcef/libcef_dll/cpptoc/views/browser_view_delegate_cpptoc.h",
    "//webx/libcef/libcef_dll/cpptoc/views/button_delegate_cpptoc.cc",
    "//webx/libcef/libcef_dll/cpptoc/views/button_delegate_cpptoc.h",
    "//webx/libcef/libcef_dll/cpptoc/views/menu_button_delegate_cpptoc.cc",
    "//webx/libcef/libcef_dll/cpptoc/views/menu_button_delegate_cpptoc.h",
    "//webx/libcef/libcef_dll/cpptoc/views/panel_delegate_cpptoc.cc",
    "//webx/libcef/libcef_dll/cpptoc/views/panel_delegate_cpptoc.h",
    "//webx/libcef/libcef_dll/cpptoc/views/textfield_delegate_cpptoc.cc",
    "//webx/libcef/libcef_dll/cpptoc/views/textfield_delegate_cpptoc.h",
    "//webx/libcef/libcef_dll/cpptoc/views/view_delegate_cpptoc.cc",
    "//webx/libcef/libcef_dll/cpptoc/views/view_delegate_cpptoc.h",
    "//webx/libcef/libcef_dll/cpptoc/views/window_delegate_cpptoc.cc",
    "//webx/libcef/libcef_dll/cpptoc/views/window_delegate_cpptoc.h",
    "//webx/libcef/libcef_dll/cpptoc/write_handler_cpptoc.cc",
    "//webx/libcef/libcef_dll/cpptoc/write_handler_cpptoc.h",
    "//webx/libcef/libcef_dll/ctocpp/auth_callback_ctocpp.cc",
    "//webx/libcef/libcef_dll/ctocpp/auth_callback_ctocpp.h",
    "//webx/libcef/libcef_dll/ctocpp/before_download_callback_ctocpp.cc",
    "//webx/libcef/libcef_dll/ctocpp/before_download_callback_ctocpp.h",
    "//webx/libcef/libcef_dll/ctocpp/binary_value_ctocpp.cc",
    "//webx/libcef/libcef_dll/ctocpp/binary_value_ctocpp.h",
    "//webx/libcef/libcef_dll/ctocpp/browser_ctocpp.cc",
    "//webx/libcef/libcef_dll/ctocpp/browser_ctocpp.h",
    "//webx/libcef/libcef_dll/ctocpp/browser_host_ctocpp.cc",
    "//webx/libcef/libcef_dll/ctocpp/browser_host_ctocpp.h",
    "//webx/libcef/libcef_dll/ctocpp/callback_ctocpp.cc",
    "//webx/libcef/libcef_dll/ctocpp/callback_ctocpp.h",
    "//webx/libcef/libcef_dll/ctocpp/command_line_ctocpp.cc",
    "//webx/libcef/libcef_dll/ctocpp/command_line_ctocpp.h",
    "//webx/libcef/libcef_dll/ctocpp/context_menu_params_ctocpp.cc",
    "//webx/libcef/libcef_dll/ctocpp/context_menu_params_ctocpp.h",
    "//webx/libcef/libcef_dll/ctocpp/cookie_manager_ctocpp.cc",
    "//webx/libcef/libcef_dll/ctocpp/cookie_manager_ctocpp.h",
    "//webx/libcef/libcef_dll/ctocpp/dictionary_value_ctocpp.cc",
    "//webx/libcef/libcef_dll/ctocpp/dictionary_value_ctocpp.h",
    "//webx/libcef/libcef_dll/ctocpp/domdocument_ctocpp.cc",
    "//webx/libcef/libcef_dll/ctocpp/domdocument_ctocpp.h",
    "//webx/libcef/libcef_dll/ctocpp/domnode_ctocpp.cc",
    "//webx/libcef/libcef_dll/ctocpp/domnode_ctocpp.h",
    "//webx/libcef/libcef_dll/ctocpp/download_item_callback_ctocpp.cc",
    "//webx/libcef/libcef_dll/ctocpp/download_item_callback_ctocpp.h",
    "//webx/libcef/libcef_dll/ctocpp/download_item_ctocpp.cc",
    "//webx/libcef/libcef_dll/ctocpp/download_item_ctocpp.h",
    "//webx/libcef/libcef_dll/ctocpp/drag_data_ctocpp.cc",
    "//webx/libcef/libcef_dll/ctocpp/drag_data_ctocpp.h",
    "//webx/libcef/libcef_dll/ctocpp/file_dialog_callback_ctocpp.cc",
    "//webx/libcef/libcef_dll/ctocpp/file_dialog_callback_ctocpp.h",
    "//webx/libcef/libcef_dll/ctocpp/frame_ctocpp.cc",
    "//webx/libcef/libcef_dll/ctocpp/frame_ctocpp.h",
    "//webx/libcef/libcef_dll/ctocpp/image_ctocpp.cc",
    "//webx/libcef/libcef_dll/ctocpp/image_ctocpp.h",
    "//webx/libcef/libcef_dll/ctocpp/jsdialog_callback_ctocpp.cc",
    "//webx/libcef/libcef_dll/ctocpp/jsdialog_callback_ctocpp.h",
    "//webx/libcef/libcef_dll/ctocpp/list_value_ctocpp.cc",
    "//webx/libcef/libcef_dll/ctocpp/list_value_ctocpp.h",
    "//webx/libcef/libcef_dll/ctocpp/media_access_callback_ctocpp.cc",
    "//webx/libcef/libcef_dll/ctocpp/media_access_callback_ctocpp.h",
    "//webx/libcef/libcef_dll/ctocpp/media_route_ctocpp.cc",
    "//webx/libcef/libcef_dll/ctocpp/media_route_ctocpp.h",
    "//webx/libcef/libcef_dll/ctocpp/media_router_ctocpp.cc",
    "//webx/libcef/libcef_dll/ctocpp/media_router_ctocpp.h",
    "//webx/libcef/libcef_dll/ctocpp/media_sink_ctocpp.cc",
    "//webx/libcef/libcef_dll/ctocpp/media_sink_ctocpp.h",
    "//webx/libcef/libcef_dll/ctocpp/media_source_ctocpp.cc",
    "//webx/libcef/libcef_dll/ctocpp/media_source_ctocpp.h",
    "//webx/libcef/libcef_dll/ctocpp/menu_model_ctocpp.cc",
    "//webx/libcef/libcef_dll/ctocpp/menu_model_ctocpp.h",
    "//webx/libcef/libcef_dll/ctocpp/navigation_entry_ctocpp.cc",
    "//webx/libcef/libcef_dll/ctocpp/navigation_entry_ctocpp.h",
    "//webx/libcef/libcef_dll/ctocpp/permission_prompt_callback_ctocpp.cc",
    "//webx/libcef/libcef_dll/ctocpp/permission_prompt_callback_ctocpp.h",
    "//webx/libcef/libcef_dll/ctocpp/post_data_ctocpp.cc",
    "//webx/libcef/libcef_dll/ctocpp/post_data_ctocpp.h",
    "//webx/libcef/libcef_dll/ctocpp/post_data_element_ctocpp.cc",
    "//webx/libcef/libcef_dll/ctocpp/post_data_element_ctocpp.h",
    "//webx/libcef/libcef_dll/ctocpp/preference_manager_ctocpp.cc",
    "//webx/libcef/libcef_dll/ctocpp/preference_manager_ctocpp.h",
    "//webx/libcef/libcef_dll/ctocpp/preference_registrar_ctocpp.cc",
    "//webx/libcef/libcef_dll/ctocpp/preference_registrar_ctocpp.h",
    "//webx/libcef/libcef_dll/ctocpp/print_dialog_callback_ctocpp.cc",
    "//webx/libcef/libcef_dll/ctocpp/print_dialog_callback_ctocpp.h",
    "//webx/libcef/libcef_dll/ctocpp/print_job_callback_ctocpp.cc",
    "//webx/libcef/libcef_dll/ctocpp/print_job_callback_ctocpp.h",
    "//webx/libcef/libcef_dll/ctocpp/print_settings_ctocpp.cc",
    "//webx/libcef/libcef_dll/ctocpp/print_settings_ctocpp.h",
    "//webx/libcef/libcef_dll/ctocpp/process_message_ctocpp.cc",
    "//webx/libcef/libcef_dll/ctocpp/process_message_ctocpp.h",
    "//webx/libcef/libcef_dll/ctocpp/registration_ctocpp.cc",
    "//webx/libcef/libcef_dll/ctocpp/registration_ctocpp.h",
    "//webx/libcef/libcef_dll/ctocpp/request_context_ctocpp.cc",
    "//webx/libcef/libcef_dll/ctocpp/request_context_ctocpp.h",
    "//webx/libcef/libcef_dll/ctocpp/request_ctocpp.cc",
    "//webx/libcef/libcef_dll/ctocpp/request_ctocpp.h",
    "//webx/libcef/libcef_dll/ctocpp/resource_bundle_ctocpp.cc",
    "//webx/libcef/libcef_dll/ctocpp/resource_bundle_ctocpp.h",
    "//webx/libcef/libcef_dll/ctocpp/resource_read_callback_ctocpp.cc",
    "//webx/libcef/libcef_dll/ctocpp/resource_read_callback_ctocpp.h",
    "//webx/libcef/libcef_dll/ctocpp/resource_skip_callback_ctocpp.cc",
    "//webx/libcef/libcef_dll/ctocpp/resource_skip_callback_ctocpp.h",
    "//webx/libcef/libcef_dll/ctocpp/response_ctocpp.cc",
    "//webx/libcef/libcef_dll/ctocpp/response_ctocpp.h",
    "//webx/libcef/libcef_dll/ctocpp/run_context_menu_callback_ctocpp.cc",
    "//webx/libcef/libcef_dll/ctocpp/run_context_menu_callback_ctocpp.h",
    "//webx/libcef/libcef_dll/ctocpp/run_quick_menu_callback_ctocpp.cc",
    "//webx/libcef/libcef_dll/ctocpp/run_quick_menu_callback_ctocpp.h",
    "//webx/libcef/libcef_dll/ctocpp/scheme_registrar_ctocpp.cc",
    "//webx/libcef/libcef_dll/ctocpp/scheme_registrar_ctocpp.h",
    "//webx/libcef/libcef_dll/ctocpp/select_client_certificate_callback_ctocpp.cc",
    "//webx/libcef/libcef_dll/ctocpp/select_client_certificate_callback_ctocpp.h",
    "//webx/libcef/libcef_dll/ctocpp/server_ctocpp.cc",
    "//webx/libcef/libcef_dll/ctocpp/server_ctocpp.h",
    "//webx/libcef/libcef_dll/ctocpp/shared_memory_region_ctocpp.cc",
    "//webx/libcef/libcef_dll/ctocpp/shared_memory_region_ctocpp.h",
    "//webx/libcef/libcef_dll/ctocpp/shared_process_message_builder_ctocpp.cc",
    "//webx/libcef/libcef_dll/ctocpp/shared_process_message_builder_ctocpp.h",
    "//webx/libcef/libcef_dll/ctocpp/sslinfo_ctocpp.cc",
    "//webx/libcef/libcef_dll/ctocpp/sslinfo_ctocpp.h",
    "//webx/libcef/libcef_dll/ctocpp/sslstatus_ctocpp.cc",
    "//webx/libcef/libcef_dll/ctocpp/sslstatus_ctocpp.h",
    "//webx/libcef/libcef_dll/ctocpp/stream_reader_ctocpp.cc",
    "//webx/libcef/libcef_dll/ctocpp/stream_reader_ctocpp.h",
    "//webx/libcef/libcef_dll/ctocpp/stream_writer_ctocpp.cc",
    "//webx/libcef/libcef_dll/ctocpp/stream_writer_ctocpp.h",
    "//webx/libcef/libcef_dll/ctocpp/task_manager_ctocpp.cc",
    "//webx/libcef/libcef_dll/ctocpp/task_manager_ctocpp.h",
    "//webx/libcef/libcef_dll/ctocpp/task_runner_ctocpp.cc",
    "//webx/libcef/libcef_dll/ctocpp/task_runner_ctocpp.h",
    "//webx/libcef/libcef_dll/ctocpp/test/test_server_connection_ctocpp.cc",
    "//webx/libcef/libcef_dll/ctocpp/test/test_server_connection_ctocpp.h",
    "//webx/libcef/libcef_dll/ctocpp/test/test_server_ctocpp.cc",
    "//webx/libcef/libcef_dll/ctocpp/test/test_server_ctocpp.h",
    "//webx/libcef/libcef_dll/ctocpp/test/translator_test_ctocpp.cc",
    "//webx/libcef/libcef_dll/ctocpp/test/translator_test_ctocpp.h",
    "//webx/libcef/libcef_dll/ctocpp/test/translator_test_ref_ptr_library_child_child_ctocpp.cc",
    "//webx/libcef/libcef_dll/ctocpp/test/translator_test_ref_ptr_library_child_child_ctocpp.h",
    "//webx/libcef/libcef_dll/ctocpp/test/translator_test_ref_ptr_library_child_ctocpp.cc",
    "//webx/libcef/libcef_dll/ctocpp/test/translator_test_ref_ptr_library_child_ctocpp.h",
    "//webx/libcef/libcef_dll/ctocpp/test/translator_test_ref_ptr_library_ctocpp.cc",
    "//webx/libcef/libcef_dll/ctocpp/test/translator_test_ref_ptr_library_ctocpp.h",
    "//webx/libcef/libcef_dll/ctocpp/test/translator_test_scoped_library_child_child_ctocpp.cc",
    "//webx/libcef/libcef_dll/ctocpp/test/translator_test_scoped_library_child_child_ctocpp.h",
    "//webx/libcef/libcef_dll/ctocpp/test/translator_test_scoped_library_child_ctocpp.cc",
    "//webx/libcef/libcef_dll/ctocpp/test/translator_test_scoped_library_child_ctocpp.h",
    "//webx/libcef/libcef_dll/ctocpp/test/translator_test_scoped_library_ctocpp.cc",
    "//webx/libcef/libcef_dll/ctocpp/test/translator_test_scoped_library_ctocpp.h",
    "//webx/libcef/libcef_dll/ctocpp/thread_ctocpp.cc",
    "//webx/libcef/libcef_dll/ctocpp/thread_ctocpp.h",
    "//webx/libcef/libcef_dll/ctocpp/unresponsive_process_callback_ctocpp.cc",
    "//webx/libcef/libcef_dll/ctocpp/unresponsive_process_callback_ctocpp.h",
    "//webx/libcef/libcef_dll/ctocpp/urlrequest_ctocpp.cc",
    "//webx/libcef/libcef_dll/ctocpp/urlrequest_ctocpp.h",
    "//webx/libcef/libcef_dll/ctocpp/v8context_ctocpp.cc",
    "//webx/libcef/libcef_dll/ctocpp/v8context_ctocpp.h",
    "//webx/libcef/libcef_dll/ctocpp/v8exception_ctocpp.cc",
    "//webx/libcef/libcef_dll/ctocpp/v8exception_ctocpp.h",
    "//webx/libcef/libcef_dll/ctocpp/v8stack_frame_ctocpp.cc",
    "//webx/libcef/libcef_dll/ctocpp/v8stack_frame_ctocpp.h",
    "//webx/libcef/libcef_dll/ctocpp/v8stack_trace_ctocpp.cc",
    "//webx/libcef/libcef_dll/ctocpp/v8stack_trace_ctocpp.h",
    "//webx/libcef/libcef_dll/ctocpp/v8value_ctocpp.cc",
    "//webx/libcef/libcef_dll/ctocpp/v8value_ctocpp.h",
    "//webx/libcef/libcef_dll/ctocpp/value_ctocpp.cc",
    "//webx/libcef/libcef_dll/ctocpp/value_ctocpp.h",
    "//webx/libcef/libcef_dll/ctocpp/views/box_layout_ctocpp.cc",
    "//webx/libcef/libcef_dll/ctocpp/views/box_layout_ctocpp.h",
    "//webx/libcef/libcef_dll/ctocpp/views/browser_view_ctocpp.cc",
    "//webx/libcef/libcef_dll/ctocpp/views/browser_view_ctocpp.h",
    "//webx/libcef/libcef_dll/ctocpp/views/button_ctocpp.cc",
    "//webx/libcef/libcef_dll/ctocpp/views/button_ctocpp.h",
    "//webx/libcef/libcef_dll/ctocpp/views/display_ctocpp.cc",
    "//webx/libcef/libcef_dll/ctocpp/views/display_ctocpp.h",
    "//webx/libcef/libcef_dll/ctocpp/views/fill_layout_ctocpp.cc",
    "//webx/libcef/libcef_dll/ctocpp/views/fill_layout_ctocpp.h",
    "//webx/libcef/libcef_dll/ctocpp/views/label_button_ctocpp.cc",
    "//webx/libcef/libcef_dll/ctocpp/views/label_button_ctocpp.h",
    "//webx/libcef/libcef_dll/ctocpp/views/layout_ctocpp.cc",
    "//webx/libcef/libcef_dll/ctocpp/views/layout_ctocpp.h",
    "//webx/libcef/libcef_dll/ctocpp/views/menu_button_ctocpp.cc",
    "//webx/libcef/libcef_dll/ctocpp/views/menu_button_ctocpp.h",
    "//webx/libcef/libcef_dll/ctocpp/views/menu_button_pressed_lock_ctocpp.cc",
    "//webx/libcef/libcef_dll/ctocpp/views/menu_button_pressed_lock_ctocpp.h",
    "//webx/libcef/libcef_dll/ctocpp/views/overlay_controller_ctocpp.cc",
    "//webx/libcef/libcef_dll/ctocpp/views/overlay_controller_ctocpp.h",
    "//webx/libcef/libcef_dll/ctocpp/views/panel_ctocpp.cc",
    "//webx/libcef/libcef_dll/ctocpp/views/panel_ctocpp.h",
    "//webx/libcef/libcef_dll/ctocpp/views/scroll_view_ctocpp.cc",
    "//webx/libcef/libcef_dll/ctocpp/views/scroll_view_ctocpp.h",
    "//webx/libcef/libcef_dll/ctocpp/views/textfield_ctocpp.cc",
    "//webx/libcef/libcef_dll/ctocpp/views/textfield_ctocpp.h",
    "//webx/libcef/libcef_dll/ctocpp/views/view_ctocpp.cc",
    "//webx/libcef/libcef_dll/ctocpp/views/view_ctocpp.h",
    "//webx/libcef/libcef_dll/ctocpp/views/window_ctocpp.cc",
    "//webx/libcef/libcef_dll/ctocpp/views/window_ctocpp.h",
    "//webx/libcef/libcef_dll/ctocpp/waitable_event_ctocpp.cc",
    "//webx/libcef/libcef_dll/ctocpp/waitable_event_ctocpp.h",
    "//webx/libcef/libcef_dll/ctocpp/x509cert_principal_ctocpp.cc",
    "//webx/libcef/libcef_dll/ctocpp/x509cert_principal_ctocpp.h",
    "//webx/libcef/libcef_dll/ctocpp/x509certificate_ctocpp.cc",
    "//webx/libcef/libcef_dll/ctocpp/x509certificate_ctocpp.h",
    "//webx/libcef/libcef_dll/ctocpp/xml_reader_ctocpp.cc",
    "//webx/libcef/libcef_dll/ctocpp/xml_reader_ctocpp.h",
    "//webx/libcef/libcef_dll/ctocpp/zip_reader_ctocpp.cc",
    "//webx/libcef/libcef_dll/ctocpp/zip_reader_ctocpp.h",
  ]
}
